--- a/1.Inception/index.html
+++ b/1.Inception/index.html
@@ -22,6 +22,13 @@
 
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <script>
+        const heading = React.createElement("h1", {}, "Hello from Reactjs!");
+        const root = ReactDOM.createRoot(document.getElementById("root"));
+
+        root.render(heading);
+    </script>
 </body>
 
 </html>
