Lesson number 2, igniting our application

--- a/2.IgnitingOurApp/index.html
+++ b/2.IgnitingOurApp/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="root"></div>
+    <div id="root">Working with parcel here</div>
     <!--using html-->
     <!-- <h1>Namaste React</h1> -->
 
@@ -23,10 +23,12 @@
     </script> -->
 
     <!--using react-->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
 
-    <script src="./App.js"></script>
+
+    <!--let us do it with npm(we will use parcel as bundler)-->
+    <script type="module" src="./App.js"></script>
 </body>
 
 </html>
